<resources>
    <string name="app_name">UT_preliminary</string>
    <string name="leave_activity_name">Leave Request</string>

    <string name="action_sharapp">SharApp</string>
    <string name="hello_world">Hello world!</string>
    //Login and Signup Activity
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_re_password">Re-Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_employe_id">Employee ID</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Draware Layout
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_attandance">Attandance Management</string>
    <string name="nav_leave">Event Photos</string>
    <string name="nav_gadgets">Gadgets Requirements</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Employess</string>
    <string name="nav_about_us">About Us</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Attandance Management</item>
        <item>Event Photos </item>
        <item>Gadgets Requirements</item>
        <item>Notifications</item>
        <item>Employess</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="leave_request">Leave Request</string>


    //date picker

    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>


    <string name="aboutus">UOhmac is one among the latest generation Information Technologies company who delivers the Product Engineering , Cloud Solutions and Services.  We are a trusted transformation partner and close enough to understand the individual needs of each and every customer. With the experts, we aim to become a leading Solutions and Services integrator, creating the unsurpassed service experience in Information Technology.</string>
    
    <string name="aboutus1">UOhmac Technologies, head quartered in Silicon Valley of India Bangalore, providing Information Technology Hosting Services provides, Product Engineering, Complete Enterprise CRM Automation Solutions on Cloud Computing Salesforce.com CRM Force.com, Innovative Consulting,  Application Hosting and Corporate, Open House School Learning Solutions.  Feel the difference with a decade of Generic Customer Relationship Management expertise Pioneer six plus years of Trusted Cloud Salesforce.com CRM Technology Solutions; i.e. since Salesforce.com stepped in India, we are into...
The company has niche Consultant strengths in building and managing a Business Oriented IT environment with rich experience in Product and Project Engineering, Business Intelligence, Technology Incubation, Data Management, CRM Consulting, Analytics, Data Warehousing. We are here to provide you with supreme SLAs with highly scalable infrastructure available on services. </string>
    <string name="title_activity_splash">SplashActivity</string>


</resources>
