<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attandance"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_attandance" />
        <item
            android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_leave" />
        <item
            android:id="@+id/nav_gadgets"
            android:icon="@drawable/ic_mouse_24dp"
            android:title="@string/nav_gadgets" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us"
                android:icon="@drawable/ic_people_24dp"/>
            <item
                android:id="@+id/nav_leave_request"
                android:title="@string/leave_request"
                android:icon="@drawable/ic_leave"/>

        </menu>
    </item>

</menu>
